Fix header overflow

--- a/styles/show-todo.atom-text-editor.less
+++ b/styles/show-todo.atom-text-editor.less
@@ -18,6 +18,7 @@
   h1 {
     margin-bottom: 5px;
     font-weight: bold;
+    overflow-wrap: break-word;
   }
 
   table {
